--- a/config/_default/menus/menu.en.toml
+++ b/config/_default/menus/menu.en.toml
@@ -14,6 +14,25 @@
   weight = -109
 
 [[main]]
+  name="Golang"
+  parent="Dev"
+  url = "categories/golang"
+  weight = -110
+
+[[main]]
+  name="Rust"
+  parent="Dev"
+  url = "categories/rust"
+  weight = -109
+
+# [[main]]
+#   name="Python"
+#   parent="Dev"
+#   url = "categories/python"
+#   weight = -108
+
+
+[[main]]
   name = "About"
   url = "about/"
   weight = -107
